# data-science

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
dl/deep_learning_for_healthcare/: NOTES.md
dl/i_neural_networks/: NOTES.md
dl/ii_hyperparameter_optimisation/: NOTES.md
dl/iii_structuring_ml_projects/: NOTES.md
dl/iv_cnns/: NOTES.md
dl/v_sequence_models/: NOTES.md
dl/v_sequence_models/week1/: Building_a_Recurrent_Neural_Network_Step_by_Step.ipynb  Dinosaurus_Island_Character_level_language_model.ipynb
dl/v_sequence_models/week2/: Operations_on_word_vectors_v2a.ipynb
dl/v_sequence_models/week4/: C5_W4_A1_Transformer_Subclass_v1.ipynb
gans/: C1_W3_ProteinGAN_(Optional).ipynb  C1_W3_SNGAN.ipynb  C1_W4_(Optional_Notebook)_InfoGAN.ipynb  C3_W3_Assignment.ipynb  NOTES.md
genomics/: NOTES.md
ml/: AAAMLP.md  Books.md  NOTES.md
nlp/i_classification_and_vector_spaces/: NOTES.md
nlp/ii_probabilistic_models/: NOTES.md
nlp/iii_sequence_models/: NOTES.md
nlp/iv_attention_models/: C4_W3_2_Question_Answering_with_BERT_and_HuggingFace_Pytorch_tydiqa.ipynb  NOTES.md
projects/dimensionality_reduction/: autoencoder.ipynb  pca.ipynb
projects/linear_regression/: Additional Exercise.ipynb  Admission_Predict.csv  Advertising.csv  Graduate_Admission_Prediction.ipynb  Learner Notebook.ipynb  Univariate Linear Regression.ipynb  bike_sharing_data.txt  linreg.py  multiple-linear-regression.ipynb
projects/markov_chains/: text_generation.ipynb
projects/markov_chains/text/: grimm_tales.txt  little_red_riding_hood.txt  robin_hood_prologue.txt
projects/naive_bayes/: language_classification.ipynb  utils.py
projects/naive_bayes/data/: train_cs.txt  train_en.txt  train_sk.txt  val_cs.txt  val_en.txt  val_sk.txt
projects/neural_nets/: regularisation.ipynb
projects/neural_nets/cnns/: image_classification.ipynb
projects/neural_nets/logistic_regression/: Logistic Regression - Additional Example.ipynb  (+1 more)
projects/prophet/: covid_data.csv
projects/svm/: demo.ipynb  medical_svm.ipynb
projects/xgboost/: used_cars.csv  xgboost.ipynb
tests/: test_one_plus_one.py
ts/: Histogram.ipynb  NOTES.md  Scatterplot.ipynb
(+3 files in other folders)
