[tool.poetry]
authors = ["leandroviajando"]
description = ""
name = "deep-learning-ai"
version = "0.1.0"

[tool.black]
line-length = 125

[tool.isort]
profile = "black"

[tool.mypy]
exclude = ".venv/"
explicit_package_bases = "True"
ignore_missing_imports = "True"
namespace_packages = "True"

[tool.bandit]
exclude_dirs = [".venv", "tests", "*/test_*.py"]

[tool.poetry.dependencies]
matplotlib = "^3.7.1"
numpy = "^1.23"
python = ">=3.10,<3.11"

[tool.poetry.group.huggingface]
optional = true

[tool.poetry.group.huggingface.dependencies]
datasets = "^2.13.1"
transformers = "^4.30.2"
torch = "^2.0.1"

[tool.poetry.group.tf]
optional = true

[tool.poetry.group.tf.dependencies]
tensorflow = "^2.12.0"

[tool.poetry.group.torch]
optional = true

[tool.poetry.group.torch.dependencies]
torch = "^2.0.1"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
black = "^22.3.0"
commitizen = "^2.37.0"
flake8 = "^4.0.1"
flake8-SQL = "^0.4.1"
flake8-absolute-import = "^1.0.0"
flake8-annotations = "^2.9.0"
flake8-annotations-complexity = "^0.0.7"
flake8-annotations-coverage = "^0.0.6"
flake8-assertive = "^2.1.0"
flake8-black = "^0.3.3"
flake8-broken-line = "^0.4.0"
flake8-bugbear = "^22.4.25"
flake8-builtins = "^1.5.3"
flake8-codes = "^0.2.2"
flake8-comprehensions = "^3.10.0"
flake8-eradicate = "^1.2.1"
flake8-executable = "^2.1.1"
flake8-fixme = "^1.1.1"
flake8-functions = "^0.0.7"
flake8-functions-names = "^0.3.0"
flake8-isort = "^4.1.1"
flake8-markdown = "^0.3.0"
flake8-mock = "^0.3"
flake8-no-implicit-concat = "^0.3.3"
flake8-print = "^5.0.0"
flake8-pytest = "^1.3"
flake8-pytest-style = "^1.6.0"
flake8-return = "^1.1.3"
flake8-rst-docstrings = "^0.2.5"
flake8-simplify = "^0.19.2"
flake8-todo = "^0.7"
flake8-variables-names = "^0.0.5"
ipykernel = "^6.22.0"
isort = "^5.10.1"
jupyter = "^1.0.0"
jupyter-black = "^0.3.3"
mypy = "^0.981"
pandas-vet = "^0.2.3"
pep8-naming = "^0.13.1"
pre-commit = "^2.20.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-env = "^0.6.2"
refurb = "^1.9.0"
safety = "^2.1.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
